# trim

./: CMakeLists.txt  README.md  main.cpp
